2009-01-12  Sancho Lerena <lsrena@artica.es>

	* functions_db.php, 
	* godmode/agentes/configurar_agente.php: Delete module deletes 
	tagent_data_inc record (it's a very small table).

	* reporting/fgraph.php: Fixed small problem in tagent_access graph.

	* pandoradb_migrate_20_to_21.sql: DB Schema migration script. Not
	finished (not convert old data, only add/remove structures).

2009-01-12  Jorge Gonzalez  <jorgegonz@artica.es>

	include/help/en/help_alert-matches.php,
	include/help/en/help_time_stamp-comparation.php: Added help files.

	include/languages/es.po, include/languages/es.mo: Updated Spanish
	translation.

	include/languages/index.pot: Updated po template.

	godmode/setup/setup.php, godmode/agentes/alert_manager.php: Added
	help functions.

2009-01-12  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	  translation.

	* include/languages/index.pot: Updated po template.

	* include/functions_alerts.php, godmode/menu.php,
	  godmode/agentes/module_manager_editor_network.php,
	  godmode/alerts/alert_templates.php,
	  godmode/alerts/configure_alert_template.php,
	  godmode/setup/setup.php, operation/agentes/estado_alertas.php:
	  Modified strings to improve i18n infrastructure.

2009-01-12  Esteban Sanchez  <estebans@artica.es>

	* include/javascript/pandora_alerts.js: Added to repository.
	Javascript functions for alerts.

	* pandoradb_data.sql: Added missing field in a talert_commands row.

2009-01-12  Esteban Sanchez  <estebans@artica.es>

	* include/functions_alerts.php: Removed debug output. Show no SQL
	error on delete_alert_* functions.

	* index.php: Added missing jQuery script.

	* godmode/alerts/alert_templates.php: Added a missing br. Show "empty"
	string if no value was set.

	* godmode/alerts/alert_commands.php: Added a check to avoid internal
	commands removal.

	* pandoradb.sql: Removed talerta table.

	* pandoradb_data.sql: Data from talerta moved to talert_commands.
